tests/mypy/mypy_function_wrapper_fn_t4.out
tests/mypy/mypy_function_wrapper_fn_t4.py:26: error: No overload variant of "__call__" of "FunctionDecorator" matches argument type "str"  [call-overload]
tests/mypy/mypy_function_wrapper_fn_t4.py:26: note: Possible overload variants:
tests/mypy/mypy_function_wrapper_fn_t4.py:26: note:     def __call__(self, callable: Callable[..., Any]) -> FunctionWrapper[[VarArg(Any), KwArg(Any)], Any]
tests/mypy/mypy_function_wrapper_fn_t4.py:26: note:     def __call__(self, callable: Descriptor) -> FunctionWrapper[Any, Any]
tests/mypy/mypy_function_wrapper_fn_t4.py:27: error: No overload variant of "__call__" of "FunctionDecorator" matches argument type "None"  [call-overload]
tests/mypy/mypy_function_wrapper_fn_t4.py:27: note: Possible overload variants:
tests/mypy/mypy_function_wrapper_fn_t4.py:27: note:     def __call__(self, callable: Callable[..., Any]) -> FunctionWrapper[[VarArg(Any), KwArg(Any)], Any]
tests/mypy/mypy_function_wrapper_fn_t4.py:27: note:     def __call__(self, callable: Descriptor) -> FunctionWrapper[Any, Any]
Found 2 errors in 1 file (checked 1 source file)
